tests/snapshots/tiebreak__insta_tiebreak_index.snap
---
source: tests/tiebreak.rs
expression: h.buffer_view()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  b                                                                             "
"  ac                                                                            "
"  ab                                                                            "
"  c                                                                             "
"> a                                                                             "
"  5/5                                                                        0/0"
">                                                                               "
