tests/snapshots/tiebreak__insta_tiebreak_length.snap
---
source: tests/tiebreak.rs
expression: h.buffer_view()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  aaba                                                                          "
"  aba                                                                           "
"  ac                                                                            "
"  c                                                                             "
"> b                                                                             "
"  5/5                                                                        0/0"
">                                                                               "
