tests/snapshots/tiebreak__insta_tiebreak_neg_begin-2.snap
---
source: tests/tiebreak.rs
expression: h.buffer_view()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  b                                                                             "
"  aba                                                                           "
"> aaba                                                                          "
"  3/5                                                                        0/0"
"> b                                                                             "
