tests/snapshots/tiebreak__insta_tiebreak_neg_end-2.snap
---
source: tests/tiebreak.rs
expression: h.buffer_view()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  aba                                                                           "
"> aaba                                                                          "
"  2/5                                                                        0/0"
"> ba                                                                            "
