tests/snapshots/tiebreak__insta_tiebreak_neg_end.snap
---
source: tests/tiebreak.rs
expression: h.buffer_view()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  ac                                                                            "
"  aaba                                                                          "
"  c                                                                             "
"  b                                                                             "
"> aba                                                                           "
"  5/5                                                                        0/0"
">                                                                               "
