tests/snapshots/tiebreak__tiebreak_begin.snap
---
source: tests/tiebreak.rs
expression: h.buffer_view()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  ac                                                                            "
"  aba                                                                           "
"  c                                                                             "
"  b                                                                             "
"> aaba                                                                          "
"  5/5                                                                        0/0"
">                                                                               "
