tests/snapshots/tiebreak__tiebreak_begin@001.snap
---
source: tests/tiebreak.rs
description: "input: items [\"aaba\", \"b\", \"c\", \"aba\", \"ac\"]\noptions: --tiebreak=begin,score"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  ac                                                                            "
"  aba                                                                           "
"  c                                                                             "
"  b                                                                             "
"> aaba                                                                          "
"  5/5                                                                        0/0"
">                                                                               "
cursor: (24, 3)
